==> RT-Thread/rt-thread/bsp/ht32/libraries/HT32_STD_1xxxx_FWLib/library/HT32F1xxxx_Driver/src/ht32f1xxxx_sdio.c <==
#include "ht32f1xxxx_sdio.h"

void SDIO_DeInit(void)
{
  RSTCU_PeripReset_TypeDef RSTCUReset = {{0}};

  RSTCUReset.Bit.SDIO = 1;
  RSTCU_PeripReset(RSTCUReset, ENABLE);
}

void SDIO_Init(SDIO_InitTypeDef* SDIO_InitStruct)
{
  u32 t;

  /* Check the parameters                                                                                   */
  Assert_Param(IS_SDIO_CLOC_DIV(SDIO_InitStruct->SDIO_ClockDiv));
  Assert_Param(IS_SDIO_CLOCK_PERIOD(SDIO_InitStruct->SDIO_ClockPeriod));
  Assert_Param(IS_SDIO_CLOCK_POWER_SAVE(SDIO_InitStruct->SDIO_ClockPowerSave));
  Assert_Param(IS_SDIO_BUS_WIDE(SDIO_InitStruct->SDIO_BusWide));
  Assert_Param(IS_SDIO_BUS_MODE(SDIO_InitStruct->SDIO_BusMode));

  /* Disable the SDIO clock and wait for a while                                                            */
  SDIO_ClockCmd(DISABLE);
  for (t = 500; t > 0; t--);

  /* Configure SDIO bus and clock                                                                           */
  HT_SDIO->CR = SDIO_InitStruct->SDIO_BusWide | SDIO_InitStruct->SDIO_BusMode;

  HT_SDIO->CLKCR = SDIO_InitStruct->SDIO_ClockPeriod | SDIO_InitStruct->SDIO_ClockPowerSave |
                   ((SDIO_InitStruct->SDIO_ClockDiv - 1) << 8);

  /* Enable SDIO bus clock                                                                                  */
  SDIO_ClockCmd(ENABLE);
}

void SDIO_ClockCmd(ControlStatus Cmd)
{
  /* Check the parameters                                                                                   */
  Assert_Param(IS_CONTROL_STATUS(Cmd));

  if (Cmd != DISABLE)
  {
    BitBand((u32)&HT_SDIO->CLKCR, 2) = Cmd;
  }
  else
  {
    BitBand((u32)&HT_SDIO->CLKCR, 2) = Cmd;
  }
}

void SDIO_SendCommand(SDIO_CmdInitTypeDef *SDIO_CmdInitStruct)
{
  /* Check the parameters                                                                                   */
  Assert_Param(IS_SDIO_CMD_INDEX(SDIO_CmdInitStruct->SDIO_CmdIndex));
  Assert_Param(IS_SDIO_RESPONSE(SDIO_CmdInitStruct->SDIO_Response));
  Assert_Param(IS_SDIO_DATA_PRESENT(SDIO_CmdInitStruct->SDIO_DatPresent));
  Assert_Param(IS_SDIO_CMD_IDX_CHK(SDIO_CmdInitStruct->SDIO_CmdIdxChk));
  Assert_Param(IS_SDIO_CMD_CRC_CHK(SDIO_CmdInitStruct->SDIO_CmdCrcChk));

  HT_SDIO->ARG = SDIO_CmdInitStruct->SDIO_Argument;

  HT_SDIO->CMD = SDIO_CmdInitStruct->SDIO_CmdIndex   | SDIO_CmdInitStruct->SDIO_Response  |
                 SDIO_CmdInitStruct->SDIO_DatPresent | SDIO_CmdInitStruct->SDIO_CmdIdxChk |
                 SDIO_CmdInitStruct->SDIO_CmdCrcChk;
}

u32 SDIO_GetResponse(u32 SDIO_RESP)
{
  /* Check the parameters                                                                                   */
  Assert_Param(IS_SDIO_RESP(SDIO_RESP));

  return(rw((u32)&HT_SDIO->RESP0 + SDIO_RESP));
}

void SDIO_DataConfig(SDIO_DataInitTypeDef* SDIO_DataInitStruct)
{
  /* Check the parameters                                                                                   */
  Assert_Param(IS_SDIO_DATA_BLOCK_COUNT(SDIO_DataInitStruct->SDIO_DataBlockCount));
  Assert_Param(IS_SDIO_DATA_BLOCK_SIZE(SDIO_DataInitStruct->SDIO_DataBlockSize));
  Assert_Param(IS_SDIO_TRANSFER_MODE(SDIO_DataInitStruct->SDIO_TransferMode));
  Assert_Param(IS_SDIO_TRANSFER_DIR(SDIO_DataInitStruct->SDIO_TransferDir));
  Assert_Param(IS_SDIO_DATA_TIMEOUT(SDIO_DataInitStruct->SDIO_DataTimeOut));

  /* configure DPSM                                                                                         */
  RESET_DPSM();
  HT_SDIO->BLKCNT  = SDIO_DataInitStruct->SDIO_DataBlockCount;
  HT_SDIO->BLKSIZE = SDIO_DataInitStruct->SDIO_DataBlockSize;
  HT_SDIO->TMR     = SDIO_DataInitStruct->SDIO_TransferMode | SDIO_DataInitStruct->SDIO_TransferDir;
  HT_SDIO->TMOCR   = SDIO_DataInitStruct->SDIO_DataTimeOut;
}

FlagStatus SDIO_GetFlagStatus(u32 SDIO_FLAG)
{
  /* Check the parameters                                                                                   */
  Assert_Param(IS_SDIO_FLAG(SDIO_FLAG));

  if (HT_SDIO->SR & (SDIO_FLAG))
  {
    return SET;
  }
  else
  {
    return RESET;
  }
}

void SDIO_ClearFlag(u32 SDIO_FLAG)
{
  /* Check the parameters                                                                                   */
  Assert_Param(IS_SDIO_FLAG(SDIO_FLAG));

  HT_SDIO->SR = (SDIO_FLAG);

  if (SDIO_FLAG & SDIO_FLAG_BUF_OVERFLOW)
  {
    HT_SDIO->SER &= ~(SDIO_FLAG_BUF_OVERFLOW);
    HT_SDIO->SER |= (SDIO_FLAG_BUF_OVERFLOW);
  }
  if (SDIO_FLAG & SDIO_FLAG_BUF_UNDERFLOW)
  {
    HT_SDIO->SER &= ~(SDIO_FLAG_BUF_UNDERFLOW);
    HT_SDIO->SER |= (SDIO_FLAG_BUF_UNDERFLOW);
  }
}
